--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,4 @@
 ---
-
 name: CI
 'on':
   pull_request:
@@ -8,7 +7,20 @@ name: CI
       - main
 
 jobs:
+  gather-metadata:
+    uses: GrabAByte/github-devops-workflows/.github/workflows/writeMetadata.yml@main
+    with:
+      metadataFile: 'metadata.json'
+      metadataPath: .
   docker-lint:
     uses: GrabAByte/github-devops-workflows/.github/workflows/dockerLint.yml@main
+    with:
+      dockerfilePath: 'docker/Dockerfile'
   docker-build:
     uses: GrabAByte/github-devops-workflows/.github/workflows/dockerBuild.yml@main
+    with:
+      dockerfilePath: 'docker/Dockerfile'
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+    needs: [gather-metadata, docker-lint]
