feat: bump packages and use DNF package manager (#5)
* feat: bump packages and use DNF package manager

---------

Co-authored-by: tom.richards <tom.richards>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,10 +2,14 @@ FROM docker.io/centos:8.4.2105
 
 LABEL devops.grababyte.image.authors="GrabAByte"
 
+ENV USER centos
+ENV UID 1000
+ENV GID 1000
+
 RUN \
   sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-* && \
-  sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-* && \
-  yum install -y \
+  sed -i 's|#baseurl=http://mirror.centos.org|baseurl=https://vault.centos.org|g' /etc/yum.repos.d/CentOS-* && \
+  dnf install -y \
     gcc-8.5.0 \
     git-2.27.0 \
     jq-1.5 \
@@ -13,4 +17,9 @@ RUN \
     sudo-1.8.29 \
     unzip-6.0 \
     zip-3.0 && \
-    yum clean all
+  dnf clean all && \
+  groupadd -g "${GID}" "${USER}" && \
+  useradd -l -m -u "${UID}" -g "${GID}" "${USER}" && \
+  echo "${USER} ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
+
+USER "${USER}"
