feat: Add programming languages into base for package management (#6)
* feat: Add programming languages into base for package management

---------

Co-authored-by: tom.richards <tom.richards>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,9 +2,8 @@ FROM docker.io/centos:8.4.2105
 
 LABEL devops.grababyte.image.authors="GrabAByte"
 
-ENV USER centos
-ENV UID 1000
-ENV GID 1000
+ARG USER=centos
+ENV ID=1000
 
 RUN \
   sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-* && \
@@ -13,13 +12,20 @@ RUN \
     gcc-8.5.0 \
     git-2.27.0 \
     jq-1.5 \
+    nodejs-10.24.0 \
+    npm-6.14.11 \
     openssh-8.0p1 \
+    python36-3.6.8 \
+    ruby-2.5.9 \
     sudo-1.8.29 \
     unzip-6.0 \
     zip-3.0 && \
   dnf clean all && \
-  groupadd -g "${GID}" "${USER}" && \
-  useradd -l -m -u "${UID}" -g "${GID}" "${USER}" && \
+  pip3 install --no-cache-dir --upgrade \
+    pip==21.3.1 \
+    setuptools==59.6.0 && \
+  groupadd -g "${ID}" "${USER}" && \
+  useradd -l -m -u "${ID}" -g "${USER}" "${USER}" && \
   echo "${USER} ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
 
 USER "${USER}"
